@@ -2,6 +2,10 @@
 
 	* tests/scripts/checker_perfcorrect.sh: Minor update.
 
+2011-07-27  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* tests/scripts/checker_perfcorrect.sh: Minor update.
+
 2011-07-26  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* tests/scripts/checker_perfcorrect.sh: Minor update, fix
